[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Coots.gd" type="Script" id=1]
[ext_resource path="res://assets/cat/cat_idle.png" type="Texture" id=2]
[ext_resource path="res://assets/cat/cat_walk.png" type="Texture" id=3]
[ext_resource path="res://assets/cat/cat_jump_fall_land.png" type="Texture" id=4]
[ext_resource path="res://assets/cat/cat_airtumble.png" type="Texture" id=5]
[ext_resource path="res://assets/cat/cat_dive_slide.png" type="Texture" id=6]
[ext_resource path="res://assets/cat/cat_death.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 6 )

[node name="Coots" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -10 )
current = true

[node name="Sprite_idle" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
hframes = 4

[node name="Sprite_walk" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -6 )
texture = ExtResource( 3 )
hframes = 8

[node name="Sprite_jump_fall_land" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -6 )
texture = ExtResource( 4 )
hframes = 7
frame = 6

[node name="Sprite_airtumble" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -7 )
texture = ExtResource( 5 )
hframes = 4

[node name="Sprite_dive_slide" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -5 )
texture = ExtResource( 6 )
hframes = 4

[node name="Sprite_dead" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -9 )
texture = ExtResource( 7 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )
